# PixelSum

./: CMakeLists.txt  PixelSum.pro  TodoList.txt  main.cpp
MemoryMgmt/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryMgmt.pri  VirtualMemory.cpp  VirtualMemory.h  VirtualMemoryPool.cpp  VirtualMemoryPool.h  VirtualMemoryPoolConfig.h  VirtualMemoryUtils.h
PixelSum/: PixelSum.cpp  PixelSum.h  PixelSum.pri  PixelSumNaive.cpp  PixelSumNaive.h  PixelSumTheirs.cpp  PixelSumTheirs.h
PixelSum/HelperClasses/: CMakeLists.txt  CustomTypes.h  LogMacros.h  PixelBuffer.h  ScopedTimer.h  UtilityFunctions.h
TestCases/: PixelSumTestCases.h  TestCaseHelper.h  TestCases.pri
